crates/carta/tests/snapshots/golden_e2e__rst__latex__figure-legend.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{figure}
\centering
\pandocbounded{\includegraphics[keepaspectratio,alt={The caption line.}]{chart.png}}
\caption{The caption line.\\
A first legend paragraph.\\
A second legend paragraph.}
\end{figure}
