crates/carta/tests/snapshots/golden_e2e__rst__latex__indirect-targets.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Follow the \href{https://example.com/page}{alias} to its destination.
