crates/carta/tests/snapshots/golden_e2e__rst__latex__inline-literal-linebreak.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A literal \texttt{spanning\ two\ lines} folds the line break to a single
space.
