crates/carta/tests/snapshots/golden_e2e__rst__latex__inline-roles.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Water is H\textsubscript{2}O and the area is x\textsuperscript{2}.

Use \emph{emphasised text}, \textbf{strong text}, and a {Title
Reference}.

Inline code through a role: \texttt{value\ =\ 1} and inline math
\(a^2 + b^2 = c^2\).
