crates/carta/tests/snapshots/golden_e2e__rst__latex__inline-targets.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
An \protect\phantomsection\label{inline-target}{inline target} marks a
spot that other text can point back to.

Here is \protect\phantomsection\label{another-one}{another one} in the
middle of a sentence.
